# python-turbine-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/turbine_pipeline/: __init__.py  anomalies.py  clean.py  ingest.py  pipeline.py  schemas.py  stats.py  warehouse.py
tests/: conftest.py  test_anomalies.py  test_clean.py  test_ingest.py  test_pipeline.py  test_stats.py  test_warehouse.py
